--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="timer" id="timerText">
       Not started yet.
     </div>
+    <textarea id="notes"></textarea>
     <script src="main.js"></script>
   </body>
 </html>
