--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <div class="timersettings">
       Minutes: <input type="text" value="5" id="numMinutes">
       <button type="button" id="startTimer">Start Timer!</button>
+      <div class="actualsettings">
+          <input type="checkbox" id="speak" name="speak" checked>
+          <label for="speak">Speak</label>
+      </div>
     </div>
     <div class="timer" id="timerText">
       Not started yet.
