Don't check by default

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Minutes: <input type="text" value="5" id="numMinutes">
       <button type="button" id="startTimer">Start Timer!</button>
       <div class="actualsettings">
-          <input type="checkbox" id="speak" name="speak" checked>
+          <input type="checkbox" id="speak" name="speak">
           <label for="speak">Speak</label>
       </div>
     </div>
