Add buttons for next pom end

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div class="timersettings">
       Minutes: <input type="text" value="5" id="numMinutes">
       <button type="button" id="startTimer">Start Timer!</button>
+      <button type="button" id="untilNext" title="time until next pom end">Until next</button>
+      <button type="button" id="untilNextPlusOne" title="time until next next pom end">Until next + 1</button>
       <div class="actualsettings">
           <input type="checkbox" id="speak" name="speak">
           <label for="speak">Speak</label>
